--- a/R.P.S-game-v2/index.html
+++ b/R.P.S-game-v2/index.html
@@ -16,8 +16,13 @@
         <div id="user-choice">Your choice: </div>
         <div id="computer-choice">Computer choice: </div>
         <div id="winner"> You will find out!</div>
-        <div id="user-score">Your score: </div>
-        <div id="computer-score">Computer score: </div>
+        <div> Your score:
+            <div id="user-score"></div>
+        </div>
+        <div>Computer score:
+            <div id="computer-score"></div>
+        </div>
+
     </body>
     <script src="rps-v2.js"></script>
 </html>
